--- a/antora.yml
+++ b/antora.yml
@@ -2,7 +2,7 @@ name: test-app
 title: Test App
 version: docs
 prerelease: -beta
-start_page: ROOT:bonobo-nodes.adoc
+start_page: ROOT:index.adoc
 asciidoc:
   attributes:
     source-language: asciidoc@
