--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -1,4 +1,4 @@
-name: Publish to GitHub Pages with Lunr Search Extension
+name: Publish to GitHub Pages
 on:
   push:
     branches: [main]
@@ -12,12 +12,12 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '16'
-    - name: Install Antora and the Antora Lunr Extension
-      run: npm i antora @antora/lunr-extension
+    - name: Install Antora
+      run: npm i antora
     - name: Generate Site
       run: npx antora antora-playbook.yml
     - name: Publish to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-  #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #  github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: build/site
