--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -13,9 +13,11 @@ jobs:
       with:
         node-version: '16'
     - name: Install Antora
-      run:  npm i -g @antora/cli@3.0 @antora/site-generator@3.0
+      run:  npm i antora
     - name: Generate Site
       run: npx antora antora-playbook.yml
+    - name: View dir 
+      run: ls build/site
     - name: Publish to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
